# autohide-tdrop

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  flake.nix
.devenv/: profile
.github/workflows/: ci.yml  release.yml
src/: main.rs
